--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,7 +9,10 @@
     "Guten",
     "Logicos",
     "mayoria",
+    "multiplicacion",
     "Multiplicacion",
+    "Numeros",
+    "Nums",
     "Obten",
     "Perimetro",
     "Rectangulo",
