--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,12 +3,15 @@
     "Adolar",
     "aleman",
     "conection",
+    "contrseña",
     "Digitos",
     "dolares",
     "fizzbuzz",
     "Guten",
     "Logicos",
     "mayoria",
+    "metodo",
+    "Metodo",
     "multiplicacion",
     "Multiplicacion",
     "Numeros",
