--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,8 @@
   "cSpell.words": [
     "Adolar",
     "aleman",
+    "arguemento",
+    "Bienvenid",
     "conection",
     "contrseña",
     "Digitos",
@@ -9,7 +11,9 @@
     "fizzbuzz",
     "Guten",
     "Logicos",
+    "mario",
     "mayoria",
+    "mayuscula",
     "metodo",
     "Metodo",
     "multiplicacion",
@@ -17,8 +21,10 @@
     "Numeros",
     "Nums",
     "Obten",
+    "pasarle",
     "Perimetro",
     "Rectangulo",
+    "reotrnar",
     "retórnalo",
     "tambien"
   ]
