--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,7 +9,9 @@
     "Digitos",
     "dolares",
     "fizzbuzz",
+    "gitbash",
     "Guten",
+    "linux",
     "Logicos",
     "mario",
     "mayoria",
