--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
     "aleman",
     "arguemento",
     "Bienvenid",
+    "caracter",
     "conection",
     "contrseña",
     "Digitos",
@@ -11,6 +12,7 @@
     "fizzbuzz",
     "gitbash",
     "Guten",
+    "Interseccion",
     "linux",
     "Logicos",
     "mario",
@@ -28,6 +30,7 @@
     "Rectangulo",
     "reotrnar",
     "retórnalo",
-    "tambien"
+    "tambien",
+    "unico"
   ]
 }
